--- a/css/style.css
+++ b/css/style.css
@@ -369,7 +369,7 @@ button {
 
 .footer_wrapper {
     background-color: #000411;
-    padding: 20px 0;
+    padding: px 0;
 }
 
 .footer_wrapper .footer-logo img {
